[build-system]
requires = ["hatchling >= 1.18"]
build-backend = "hatchling.build"

[project]
name = "uc"
dynamic = ["version"]
readme = "README.md"
authors = [{name = "Tiago de Paula Alves"}]
requires-python = ">= 3.5"
dependencies = [
    "graphviz ~= 0.20",
    "llvmlite ~= 0.40",
    "ply ~= 3.11",
]

[project.optional-dependencies]
test = [
    "pytest ~= 7.4",
    "pytest-timeout ~= 2.1",
    "timeout_decorator ~= 0.5",
]
dev = [
    "black ~= 23.3",
    "isort ~= 5.12",
    "gitlint ~= 0.19",
    "pre-commit ~= 3.3",
]
all = ["uc[test,dev]"]

[tool.hatch.version]
path = "uc/__init__.py"
pattern = "__version__: Final = '(?P<version>[^']+)'"

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.build.targets.sdist]
include = ["uc/"]

[tool.black]
line-length = 99
