[build-system]
requires = ["hatchling >= 1.18"]
build-backend = "hatchling.build"

[project]
name = "ucc"
dynamic = ["version"]
readme = "README.md"
authors = [{name = "Tiago de Paula Alves"}]
requires-python = ">= 3.11"
dependencies = [
    "graphviz ~= 0.20",
    "llvmlite ~= 0.40",
    "ply ~= 3.11",
]

[project.optional-dependencies]
test = [
    "pytest ~= 7.4",
    "pytest-timeout ~= 2.1",
    "timeout_decorator ~= 0.5",
]
dev = [
    "black ~= 23.3",
    "flake8 ~= 6.0",
    "gitlint ~= 0.19",
    "isort ~= 5.12",
    "pre-commit ~= 3.3",
]
all = ["ucc[test,dev]"]

[tool.hatch.version]
path = "ucc/__init__.py"
pattern = "__version__: Final = \"(?P<version>[^\"]+)\""

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.build.targets.sdist]
include = ["ucc/"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
