[build-system]
requires = ["hatchling >= 1.18"]
build-backend = "hatchling.build"

[project]
name = "ucc"
dynamic = ["version"]
readme = "README.md"
authors = [{name = "Tiago de Paula Alves"}]
requires-python = ">= 3.11"
dependencies = [
    "graphviz ~= 0.20",
    "llvmlite ~= 0.40",
    "ply ~= 3.11",
    "result ~= 0.13",
]

[tool.hatch.version]
path = "ucc/__init__.py"
pattern = "__version__: Final = \"(?P<version>[^\"]+)\""

[project.optional-dependencies]
test = [
    "pytest ~= 7.4",
    "pytest-timeout ~= 2.1",
    "timeout-decorator ~= 0.5",
]
dev = [
    "black ~= 23.7",
    "flake8 ~= 6.0",
    "gitlint-core ~= 0.20.0.dev44",
    "isort ~= 5.12",
    "pre-commit ~= 3.3",
    "pyright ~= 1.1",
]
dev-extras = [
    "bpython ~= 0.24",
    "pipdeptree ~= 2.10",
]
all = ["ucc[test,dev,dev-extras]"]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.pyright]
include = ["ucc/"]
strict = [
    "ucc/common",
    "ucc/lexer",
]

[tool.hatch.build.targets.sdist]
include = ["ucc/"]
